--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link href="/dist/styles.css" rel="stylesheet">
     <link href="./global.css" rel="stylesheet">
 
-    <title>Vite + React</title>
+    <title>Portfolio</title>
   </head>
   <body>
     <div id="root"></div>
